reset input font size to 16px to match button to correct alignment

--- a/html/sites/all/themes/custom/ocha_basic/sass/pocam-custom/_home.scss
+++ b/html/sites/all/themes/custom/ocha_basic/sass/pocam-custom/_home.scss
@@ -46,7 +46,7 @@
   }
 
   input[type=text] {
-    @include font-size($cd-font-size-base);
+    @include font-size($cd-font-size-medium);
     font-family: $cd-font;
     font-weight: 300;
     color: #4A4A4A;
